2005-10-27  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.4.
	* Makefile.in: Ditto.

2005-10-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (GetProcessId): Remove duplicate declaration.
	Use _WIN32_WINNT >= 0x0501 guard. 

2005-10-11  Christopher Faylor  <cgf@timesys.com>

	* include/winbase.h (GetProcessId): Declare.

2005-09-23	Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* lib/ddk/newdev.def: Added.
	Thanks to: Stephan Meyer <ste_meyer at users dot sourceforge dot net>

2005-09-23	Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/commdlg.h (OPENFILENAME): Added WINNT >= 0x0500
	component.
	Thanks to: Gennady Feldman <gena01 at users dot sourceforge dot net>

2005-09-23	Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* lib/shell32.def (SHILCreateFromPath): Add stub.
	Thanks to: Michael Jung <mjung at iss dot tu-darmstadt dot de>

2005-09-21	Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (RegisterWaitForSingleObject,
	RegisterWaitForSingleObjectEx): Define.
	* lib/kernel32.def (RegisterWaitForSingleObjectEx@20): Define.
	(RegisterWaitForSingleObject@16): Changed to
	RegisterWaitForSingleObject@24.
	Thanks to: Brandon Sneed <nivenh at users dot sourceforge dot net>

2005-09-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winsock2.h (SO_EXCLUSIVEADDRUSE): Define.
	Thanks to: Gisle Vanem  <giva at bgnett dot no>

2005-09-08  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/reason.h  [_WIN32_WINNT >= 0x0501]
	(SHTDN_REASON_*): New file.
	* include/objbase.h: Avoid double header guard.

2005-08-17  Michael Jung  <mjung@iss.tu-darmstadt.de> 

	* lib/shell32.c (CLSID_RecycleBin, CLSID_ControlPanel,
	CLSID_MyComputer,CLSID_Internet, CLSID_NetworkPlaces,
	CLSID_MyDocuments, CLSID_FolderShortcut): Add GUIDs. 

005-08-17  Martin Fuchs <martin-fuchs@gmx.net>

	* include/shlobj.h (IContextMenu3): Define.