@@ -1,3 +1,9 @@
+2005-10-29	Chris Sutcliffe <ir0nh34d@users.sf.net>
+
+	* include/objbase.h: Fix typo.
+	* include/w32api.h: Increment version to 3.5.
+	* Makefile.in: Ditto.
+
 2005-10-27  Chris Sutcliffe  <ir0nh34d@users.sf.net>
 
 	* include/w32api.h: Increment version to 3.4.
